# Piano-Teacher

./: .capignore  .gitignore  README.md  background.css  capacitor.config.json  index.html  main.js  midi-upload.js  music.json  package-lock.json  package.json  piano-teacher.css  preload.js  privacy.html  script.js  sort-notes.js
.github/workflows/: static.yml
android/: .gitignore
android/app/: build.gradle
android/app/release/: output-metadata.json
android/app/release/baselineProfiles/0/: app-release.dm
android/app/release/baselineProfiles/1/: app-release.dm
android/app/src/main/java/io/github/callumop/pianoteacher/: MainActivity.java
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/msix/: AppxManifest.xml  README.md  bundle.ps1  pack.ps1  sync-version.ps1  version.ps1
src-tauri/src/: lib.rs  main.rs  migrate.rs
