[package]
name = "piano-teacher"
version = "1.3.0"
description = "An interactive way to learn piano using a visual piano interface."
authors = ["Callum O'Prey"]
edition = "2021"

# The library is the shared entry point so the same app can target desktop and
# (later) mobile via Tauri 2.
[lib]
name = "piano_teacher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Opens external links (e.g. the privacy-policy link) in the system browser
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
